--- a/Neha Project/part3/deploy/a.html
+++ b/Neha Project/part3/deploy/a.html
@@ -10,10 +10,36 @@
     <h2>video tag</h2>
     <br>
     <video width="320" height="240" controls autoplay loop muted>
+        <source src="static\output_video_20231011_130115_706793.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <br>
+    <video width="320" height="240" controls autoplay loop muted>
         <source src="static\output_video_20231011_132421_436271.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <br>
+    <video width="320" height="240" controls autoplay loop muted>
+        <source src="static\output_video_20231011_161639_834352.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <br>
+    <video width="320" height="240" controls autoplay loop muted>
+        <source src="static\output_video_20231011_164902_880018.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <br>
+    <video width="320" height="240" controls autoplay loop muted>
+        <source src="static\output_video_20231011_174546_216927.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <br>
+    <video width="320" height="240" controls autoplay loop muted>
+        <source src="static\output_video_20231011_182435_457614.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <br>
+
     <video width="320" height="240" controls muted>
         <source src="video_data\v5 (1).mp4" type="video/mp4">
         Your browser does not support the video tag.
