--- a/Neha Project/part3/deploy/a.html
+++ b/Neha Project/part3/deploy/a.html
@@ -9,10 +9,13 @@
     
     <h2>video tag</h2>
     <br>
-    <video width="320" height="240" controls autoplay loop muted>
-        <source src="static\output_video_20231011_130115_706793.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <div style="width: 50%; height: 50%;">
+        <video width="320" height="240" controls autoplay loop muted>
+            <source src="static\output_video_20231011_130115_706793.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    
     <br>
     <video width="320" height="240" controls autoplay loop muted>
         <source src="static\output_video_20231011_132421_436271.mp4" type="video/mp4">
