--- a/Notes/02 Responsive Website/site7 Website Development Course/index.html
+++ b/Notes/02 Responsive Website/site7 Website Development Course/index.html
@@ -15,20 +15,13 @@
     <header class="header">
         <img src="images/logo.png" alt="Logo" class="logo">
 
-        <nav class="navbar">
-            <ul class="navbar_list"></ul>
-            <ul class="list"></ul>
-            <ul class="list"></ul>
-            <ul class="list"></ul>
-        </nav>
-
         <na class="navbar">
             <ul class="navbar-list">
-                <li><a href="#" class="navbar-link home-link"></a>Home</li>
-                <li><a href="" class="navbar-link about-link"></a>About</li>
-                <li><a href="" class="navbar-link service-link"></a>Services</li>
-                <li><a href="" class="navbar-link portfolio-link"></a>Portfolio</li>
-                <li><a href="" class="navbar-link contact-link"></a>Contact</li>
+                <li><a href="#" class="navbar-link home-link">Home</a></li>
+                <li><a href="" class="navbar-link about-link">About</a></li>
+                <li><a href="" class="navbar-link service-link">Services</a></li>
+                <li><a href="" class="navbar-link portfolio-link">Portfolio</a></li>
+                <li><a href="" class="navbar-link contact-link">Contact</a></li>
                 
             </ul>
         </na>
