--- a/Notes/02 Responsive Website/site7 Website Development Course/index.html
+++ b/Notes/02 Responsive Website/site7 Website Development Course/index.html
@@ -59,6 +59,67 @@
     </section>
   </main>
 
+  <!-- ======================================== 
+          Our Bio-Data Section Start  
+    ========================================  -->
+
+  <section class="section-biodata section">
+    <div class="container grid grid-two-column">
+      <div class="bio-image">
+        <img src="images/biodata.jpg" alt="my bio data image" />
+      </div>
+      <!-- bio right side data  -->
+      <div class="bio-data">
+        <h2 class="common-heading">my bio-data</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+          natus eum quibusdam, blanditiis nobis dolor distinctio asperiores
+          itaque voluptas nesciunt cum dolorum. Quidem sed id repellat facere
+        </p>
+        <br />
+        <p>
+          itaque voluptas nesciunt cum dolorum. Quidem sed id repellat facere
+          quod placeat praesentium.
+        </p>
+        <div class="bio-data-stats">
+          <div class="bio-stats">
+            <h3>Design</h3>
+            <div class="bio-progress-bar">
+              <span>80%</span>
+            </div>
+          </div>
+          <div class="bio-stats">
+            <h3>HTML</h3>
+            <div class="bio-progress-bar bio-progress-2">
+              <span>99%</span>
+            </div>
+          </div>
+          <div class="bio-stats">
+            <h3>CSS</h3>
+            <div class="bio-progress-bar bio-progress-3">
+              <span>90%</span>
+            </div>
+          </div>
+          <div class="bio-stats">
+            <h3>JavaScript</h3>
+            <div class="bio-progress-bar bio-progress-4">
+              <span>85%</span>
+            </div>
+          </div>
+          <div class="bio-stats">
+            <h3>MERN</h3>
+            <div class="bio-progress-bar bio-progress-5">
+              <span>70%</span>
+            </div>
+          </div>
+        </div>
+        <div class="bio-data-btn">
+          <a href="#" class="btn">Download CV</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 </body>
